src/widgets/styles.css
a {
  text-decoration: none;
}

.min-w-14 {
  min-width: 14px;
}

.container {
  margin: 0;
  border-radius: 10px;
  border: 1px solid #e2e4e9;
  color: #0d2a4c;
  background-color: #fff;
}

.container--dark {
  border: 1px solid #2c2f36;
  background-color: #1e1f23;
  color: #ffffff;
}

.title-block {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 8px;
  padding: 6px 16px;
  border-bottom: 1px solid #e2e4e9;
}

.container--dark .title-block {
  border-bottom: 1px solid #2c2f36;
}

.title-block__text {
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 20px;
  letter-spacing: -0.4px;
}

.title-block__button {
  font-family: inherit;
  border-radius: 8px;
  border: 1px solid rgba(255, 255, 255, 0.12);
  background: #288dff;
  box-shadow: 0 1px 2px 0 rgba(14, 18, 27, 0.24), 0 0 0 1px #288dff;
  color: #ffffff;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 16px;
  letter-spacing: -0.4px;
  padding: 7px 14px;
  transition: all 0.3s ease;
  white-space: nowrap;
}

.title-block__button:hover {
  background: #0f75ff;
  box-shadow: 0 4px 8px 0 rgba(14, 18, 27, 0.24), 0 0 0 1px #0f75ff;
}

.no-data {
  border-top: 1px solid #ebecf0;
  text-align: center;
  padding: 16px;
}

.container--dark .no-data {
  border-top: 1px solid #2c2f36;
}

.overflow {
  overflow: auto;
}

.table {
  width: 100%;
  min-width: 500px;
  border-collapse: collapse;
}

.table__th {
  padding: 6px 16px;
  text-align: left;
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  letter-spacing: -0.4px;
  background-color: #f9fafb;
}

.container--dark .table__th {
  background-color: #2c2f36;
}

.table__td {
  padding: 6px 16px;
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  letter-spacing: -0.4px;
}

.table__flex {
  display: flex;
  gap: 8px;
  align-items: center;
}

.container--dark .table__flex svg {
  filter: brightness(0) invert(1);
}

.table__badge {
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 1px;
  padding-bottom: 1px;

  border: 1px solid #dbeafe;
  border-radius: 6px;
  background: #eff6ff;

  font-size: 12px;
  font-weight: 500;
  line-height: 18px;
  letter-spacing: -0.01em;
  color: #288dff;

  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;

  text-transform: capitalize;
}

.container--dark .table__badge {
  border: 1px solid #2c2f36;
  background: #2c2f36;
}

.table__tr {
  border-top: 1px solid #ebecf0;
}

.container--dark .table__tr {
  border-top: 1px solid #2c2f36;
}

.table__line {
  height: 1px;
  background-color: #eeeff2;
}

.container--dark .table__line {
  background-color: #2c2f36;
}

.table__img-circle {
  width: 16px;
  height: 16px;
  min-width: 16px;
  border-radius: 50%;
  overflow: hidden;
}

.capitalize {
  text-transform: capitalize;
}

